<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/back_edit_text"
    android:backgroundTint="@color/white_back"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_task"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_task"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_task"
        android:layoutDirection="rtl"
        android:textColorHint="@color/Neutral_500"
        app:boxStrokeErrorColor="@color/Transparent"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_edit_text"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="2"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_task">

        <RadioButton
            android:id="@+id/radio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main"
            android:checked="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/low"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/normal"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/high"
            android:textColor="@color/black" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/back_buttom"
        android:backgroundTint="@color/main"
        android:text="@string/save"
        android:textColor="@color/white_back"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/back_buttom"
        android:text="@string/cancel"
        android:textColor="@color/main"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_save"
        app:layout_constraintTop_toTopOf="@+id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>